--- a/gn/core.gni
+++ b/gn/core.gni
@@ -586,7 +586,7 @@ skia_skpicture_sources = [
 ]
 
 skia_core_sources += skia_pathops_sources
-skia_core_sources += skia_skpicture_sources
+#skia_core_sources += skia_skpicture_sources
 
 skia_core_public += skia_pathops_public
 skia_core_public += skia_skpicture_public
