--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3345,17 +3345,17 @@ if (skia_enable_tools) {
   }
 }
 
-if (is_ios && skia_use_metal && !skia_enable_flutter_defines) {
-  group("minimal_ios_mtl_skia_app") {
-    deps = [ "experimental/minimal_ios_mtl_skia_app" ]
-  }
-}
+#if (is_ios && skia_use_metal && !skia_enable_flutter_defines) {
+#  group("minimal_ios_mtl_skia_app") {
+#    deps = [ "experimental/minimal_ios_mtl_skia_app" ]
+#  }
+#}
 
-if (is_ios && skia_enable_skottie && !skia_enable_flutter_defines) {
-  group("skottie_ios") {
-    deps = [ "tools/skottie_ios_app" ]
-  }
-}
+#if (is_ios && skia_enable_skottie && !skia_enable_flutter_defines) {
+#  group("skottie_ios") {
+#    deps = [ "tools/skottie_ios_app" ]
+#  }
+#}
 
 #skia_executable("skia_c_api_example") {
 #  sources = [ "experimental/c-api-example/skia-c-example.c" ]
